--- a/SSD Assignment/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -48,6 +48,21 @@
     </ol>
 </div>
 
+@*Without QR code
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
+}*@
+
+@section Scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+
+    <script type="text/javascript" src="~/lib/qrcode.js"></script>
+    <script type="text/javascript">
+        new QRCode(document.getElementById("qrCode"),
+            {
+                text: "@Html.Raw(Model.AuthenticatorUri)",
+                width: 150,
+                height: 150
+            });
+    </script>
 }
