--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SSDAssignment.Pages.Listings.CreateModel
+@model SSD_Assignment.Pages.Listings.CreateModel
 
 @{
     ViewData["Title"] = "Create";
