--- a/SSD Assignment/Pages/Listings/Delete.cshtml
+++ b/SSD Assignment/Pages/Listings/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SSDAssignment.Pages.Listings.DeleteModel
+@model SSD_Assignment.Pages.Listings.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
