--- a/SSD Assignment/Pages/Listings/Details.cshtml
+++ b/SSD Assignment/Pages/Listings/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SSDAssignment.Pages.Listings.DetailsModel
+@model SSD_Assignment.Pages.Listings.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
