--- a/SSD Assignment/Pages/Listings/Index.cshtml
+++ b/SSD Assignment/Pages/Listings/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SSDAssignment.Pages.Listings.IndexModel
+@model SSD_Assignment.Pages.Listings.IndexModel
 
 @{
     ViewData["Title"] = "Index";
