--- a/SSD Assignment/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -53,6 +53,7 @@
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }*@
 
+@*With QR code*@
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 
