--- a/SSD Assignment/Pages/Listings/Edit.cshtml
+++ b/SSD Assignment/Pages/Listings/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SSDAssignment.Pages.Listings.EditModel
+@model SSD_Assignment.Pages.Listings.EditModel
 
 @{
     ViewData["Title"] = "Edit";
