--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" enctype="multipart/form-data">
+        <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Listing.Title" class="control-label"></label>
@@ -37,11 +37,6 @@
                 <label asp-for="Listing.Condition" class="control-label"></label>
                 <input asp-for="Listing.Condition" class="form-control" />
                 <span asp-validation-for="Listing.Condition" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Listing.Photo" class="control-label"></label>
-                <input asp-for="Listing.Photo" type="file" class="form-control" />
-                <span asp-validation-for="Listing.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
