Completed part of uploading profile picture

--- a/SSD Assignment/Pages/Listings/Index.cshtml
+++ b/SSD Assignment/Pages/Listings/Index.cshtml
@@ -54,7 +54,7 @@
                     @Html.DisplayFor(modelItem => item.Condition)
                 </td>
                 <td>
-                    <img src="~/Uploads/@item.PhotoPath" class="img-thumbnail" width="50" />
+                    <img src="~/Uploads/Listings/@item.PhotoPath" class="img-thumbnail" width="50" />
                 </td>
                 <td>
                     <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
