--- a/SSD Assignment/Pages/Account/Manage/Index.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IndexModel
+@model SSD_Assignment.Pages.Account.Manage.IndexModel
 @{
     ViewData["Title"] = "Profile";
 }
@@ -10,6 +10,14 @@
     <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div>
+                <img src="~/Uploads/ProfilePics/
+            </div>
+            <div class="form-group">
+                <label asp-for="GetProfilePic.Profilepicture" class="control-label"></label>
+                <input asp-for="GetProfilePic.Profilepicture" type="file" class="form-control" />
+                <span asp-validation-for="GetProfilePic.Profilepicture" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
