--- a/SSD Assignment/Pages/Account/Manage/Index.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/Index.cshtml
@@ -10,9 +10,15 @@
     <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div>
-                <img src="~/Uploads/ProfilePics/
-            </div>
+            @if (Model.GetProfilePic == null)
+            {
+                <img src="~/Uploads/ProfilePics/empty.png" width="100" />
+
+            }
+            else
+            {
+                <img src="~/Uploads/ProfilePics/@Model.GetProfilePic.PhotoPath" width="100" />
+            }
             <div class="form-group">
                 <label asp-for="GetProfilePic.Profilepicture" class="control-label"></label>
                 <input asp-for="GetProfilePic.Profilepicture" type="file" class="form-control" />
@@ -25,17 +31,17 @@
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 @if (Model.IsEmailConfirmed)
-        {
-            <div class="input-group">
-                <input asp-for="Input.Email" class="form-control" />
-                <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
-            </div>
-}
-else
-{
-        <input asp-for="Input.Email" class="form-control" />
-        <button asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
-}
+                {
+                    <div class="input-group">
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
+                    </div>
+                }
+                else
+                {
+                    <input asp-for="Input.Email" class="form-control" />
+                    <button asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                }
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
