--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "Create";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/Products.css" />
+}
+
 <h2>Create</h2>
 
 <h4>Listing</h4>
@@ -25,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Listing.Description" class="control-label"></label>
-                <input asp-for="Listing.Description" class="form-control" />
+                <textarea asp-for="Listing.Description" class="form-control" style="height: 200px;"></textarea>
                 <span asp-validation-for="Listing.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
