--- a/SSD Assignment/Pages/_LoginPartial.cshtml
+++ b/SSD Assignment/Pages/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using SSD_Assignment.Data
+@using SSD_Assignment.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
