--- a/SSD Assignment/Pages/Account/Manage/Index.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/Index.cshtml
@@ -8,8 +8,24 @@
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="image-container">
+                @if (Model.ProfilePic is null)
+                {
+                    <img src="~/Uploads/ProfilePics/default.png" class="img-thumbnail" />
+                }
+                else
+                {
+                    <img src="~/Uploads/ProfilePics/@Model.ProfilePic" class="img-thumbnail" />
+                }
+
+            </div>
+            <div class="form-group">
+                <label asp-for="ProfilePic">Profile Picture</label>
+                <input asp-for="ProfilePic" class="form-control" />
+                <span asp-validation-for="ProfilePic"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
