--- a/SSD Assignment/Pages/Listings/Details.cshtml
+++ b/SSD Assignment/Pages/Listings/Details.cshtml
@@ -23,6 +23,10 @@
             <td>S$@Html.DisplayFor(model => model.Listing.Price)</td>
         </tr>
         <tr>
+            <td><img src="~/images/Listings/box-closed.png"></td>
+            <td>@Html.DisplayFor(model => model.Listing.Condition)</td>
+        </tr>
+        <tr>
             <td><img src="~/images/Listings/menu-icon.png"></td>
             <td>@Html.DisplayFor(model => model.Listing.Category)</td>
         </tr>
