--- a/SSD Assignment/Pages/Listings/Delete.cshtml
+++ b/SSD Assignment/Pages/Listings/Delete.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "Delete";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/Products.css" />
+}
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -43,7 +47,7 @@
             @Html.DisplayFor(model => model.Listing.Condition)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Listing.ID" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
