--- a/SSD Assignment/wwwroot/css/Products.css
+++ b/SSD Assignment/wwwroot/css/Products.css
@@ -9,7 +9,7 @@ body {
 /*Index page*/
 ul.products li {
     width: 200px;
-    height: 225px;
+    height: 265px;
     display: inline-block;
     vertical-align: top;
     background-color: whitesmoke;
@@ -26,9 +26,19 @@ ul.products li {
         text-decoration: none;
     }
 
-    ul.products li h4 {
+    ul.products li h3 {
         color: black;
         width: 180px;
+        margin-top: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    0
+    ul.products li h5 {
+        color: black;
+        width: 180px;
+        margin-top: 0;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -38,6 +48,10 @@ ul.products li {
         color: lightslategray;
         font-size: 13px;
         margin-bottom: 0;
+        width: 180px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
 .image-container {
