--- a/SSD Assignment/Pages/_ViewImports.cshtml
+++ b/SSD Assignment/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using SSD_Assignment
+@using SSD_Assignment.Pages
 @using SSD_Assignment.Data
+@using SSD_Assignment.Models
 @namespace SSD_Assignment.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
