--- a/SSD Assignment/Pages/_Layout.cshtml
+++ b/SSD Assignment/Pages/_Layout.cshtml
@@ -16,9 +16,10 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
     @RenderSection("Styles", required: false)
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top navtop">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -27,18 +28,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">E-Garage</a>
+                <a asp-page="/Index" class="navtitle">E-Garage</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
-                    <li><a asp-page="/Listings/Index">Listings</a></li>
-                    <li style="padding: 15px; padding-right:0;">
+                    <li><a class="navbuttons" asp-page="/Index">Home</a></li>
+                    <li><a class="navbuttons" asp-page="/About">About</a></li>
+                    <li><a class="navbuttons" asp-page="/Contact">Contact</a></li>
+                    <li><a class="navbuttons" asp-page="/Listings/Index">Listings</a></li>
+                    <li style="padding: 15px;">
                         <form action="/Listings">
-                            <input type="text" name="SearchString">
-                            <input type="submit" value="Search" />
+                            <input class="searchnav" type="text" name="SearchString" placeholder="Search for an item">
+                            <button type="submit" class="searchbutton"><i class="fa fa-search"></i></button>
                         </form>
                     </li>
                 </ul>
