Added search by category

--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -51,7 +51,7 @@
                     <option value="Home Appliances">Home Appliances</option>
                     <option value="Health & Beauty">Health & Beauty</option>
                     <option value="Collectibles">Collectibles</option>
-                    <option value="Entertainment">Health & Beauty</option>
+                    <option value="Entertainment">Entertainment</option>
                     <option value="Books">Books</option>
                 </select>
                 <span asp-validation-for="Listing.Category" class="text-danger"></span>
