--- a/SSD Assignment/Pages/Listings/Index.cshtml
+++ b/SSD Assignment/Pages/Listings/Index.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/Products.css" />
 }
 
-<h2>Listings</h2>
+<h2 style="padding-top: 20px;">Listings</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -43,7 +43,7 @@
     }
 </ul>
 
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -97,6 +97,4 @@
             </tr>
         }
     </tbody>
-</table>
-
-
+</table>*@
