--- a/SSD Assignment/Pages/Account/Manage/Index.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/Index.cshtml
@@ -11,20 +11,20 @@
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="image-container">
-                @if (Model.ProfilePic is null)
+                @if (Model.Input.ProfilePic != null)
                 {
-                    <img src="~/Uploads/ProfilePics/default.png" class="img-thumbnail" />
+                    <img src="~/Uploads/ProfilePics/@Model.PhotoPath" />
                 }
                 else
                 {
-                    <img src="~/Uploads/ProfilePics/@Model.ProfilePic" class="img-thumbnail" />
-                }
+                    <img src="~/Uploads/ProfilePics/default.png" />
 
+                }
             </div>
             <div class="form-group">
-                <label asp-for="ProfilePic">Profile Picture</label>
-                <input asp-for="ProfilePic" class="form-control" />
-                <span asp-validation-for="ProfilePic"></span>
+                <label asp-for="Input.ProfilePic">Profile Picture</label>
+                <input asp-for="Input.ProfilePic" class="form-control" />
+                <span asp-validation-for="Input.ProfilePic"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
