--- a/SSD Assignment/Pages/Account/Manage/Index.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Profile";
 }
 
+
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
@@ -11,19 +12,19 @@
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="image-container">
-                @if (Model.Input.ProfilePic != null)
-                {
-                    <img src="~/Uploads/ProfilePics/@Model.PhotoPath" />
-                }
-                else
-                {
-                    <img src="~/Uploads/ProfilePics/default.png" />
-
-                }
+                @*@if (Model.FileName == null)
+                    {
+                        <img src="~/Uploads/ProfilePics/default.png" />
+                    }
+                    else
+                    {
+                        <img src="~/Uploads/ProfilePics/@Model.FileName" />
+                    }*@
+                <img src="~/Uploads/ProfilePics/@Model.FileName" />
             </div>
             <div class="form-group">
                 <label asp-for="Input.ProfilePic">Profile Picture</label>
-                <input asp-for="Input.ProfilePic" class="form-control" />
+                <input type="file" asp-for="Input.ProfilePic" class="form-control" id="FilUploader" />
                 <span asp-validation-for="Input.ProfilePic"></span>
             </div>
             <div class="form-group">
