--- a/SSD Assignment/Pages/Account/Manage/_Layout.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     Layout = "/Pages/_Layout.cshtml";
 }
 
@@ -18,6 +18,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/lib/jquery/dist/jquery-3.3.1.min.js"></script>
     @RenderSection("Scripts", required: false)
 }
-        
+
