--- a/SSD Assignment/Pages/Listings/Details.cshtml
+++ b/SSD Assignment/Pages/Listings/Details.cshtml
@@ -39,6 +39,9 @@
         </tr>
     </table>
 </div>
+<a asp-page="./Promotion">
+    <input type="submit" value="Promote" />
+</a>
 
 @*<h2>Details</h2>
 
