--- a/SSD Assignment/Pages/_LoginPartial.cshtml
+++ b/SSD Assignment/Pages/_LoginPartial.cshtml
@@ -1,14 +1,22 @@
 @using Microsoft.AspNetCore.Identity
 @using SSD_Assignment.Models
+@using SSD_Assignment.Pages.Account
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a class="navbuttons" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a class="navbuttons" asp-page="/Account/Manage/Index" title="Manage">
+                    <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/@user.ProfilePic" style="width: 60px"/>
+                    Hello @UserManager.GetUserName(User)!
+                </a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-link navlogout">Log out</button>
