--- a/SSD Assignment/Pages/Account/Register.cshtml
+++ b/SSD Assignment/Pages/Account/Register.cshtml
@@ -59,7 +59,7 @@
 
 @section Scripts {
     <script src="~/lib/jquery/dist/jquery-3.3.1.min.js"></script>
-    RenderSection("Scripts", required: false)
+    @*RenderSection("Scripts", required: false)*@
 
     <script>
         $(function () {
