--- a/SSD Assignment/Pages/Roles/Manage.cshtml
+++ b/SSD Assignment/Pages/Roles/Manage.cshtml
@@ -6,14 +6,14 @@
 <h2>Role-based Authorization Management</h2>
 <div class="row">
     <div class="col-md-4">
-        <a asp-page="Create">[Create New Role]</a> |
-        <a asp-page="Manage">[Manage User Roles]</a>
+        <a asp-page="Create">Create New Role</a> |
+        <a asp-page="Manage">Manage User Roles</a>
     </div>
 </div>
 @if (TempData["message"] != null)
 {<p><font color="red">@TempData["message"]</font></p>
 }
-<h3>[Role View - show the users in each role] </h3>
+<h3>Users in Each Role Created</h3>
 <hr />
 <table class="table">
     <thead>
@@ -34,7 +34,7 @@
         }
     </tbody>
 </table>
-<h3>[Add Role to User]</h3>
+<h3>Add Role to a User</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,7 +46,7 @@
     </div>
 </div>
 <hr />
-<h3>[Delete A User from a Role]</h3>
+<h3>Delete A User from a Role</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
