Created SeedData for admin user, Username = admin@gmail.com Password = Helloworld1105
Also, cleaned up webpage

--- a/SSD Assignment/Pages/About.cshtml
+++ b/SSD Assignment/Pages/About.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "About";
 }
+<h2 style="padding-top: 20px;"></h2>
 <h2>@ViewData["Title"]</h2>
 <h3>@Model.Message</h3>
 
