--- a/SSD Assignment/Pages/Roles/Details.cshtml
+++ b/SSD Assignment/Pages/Roles/Details.cshtml
@@ -1,8 +1,9 @@
-﻿@page 
+﻿@page
+
 @model SSD_Assignment.Pages.Roles.DetailsModel
 @{
     ViewData["Title"] = "Details"; }
-<h2>Details</h2>
+<h2 style="padding-top: 20px;">Details</h2>
 <div>
     <h4>ApplicationRole</h4>
     <hr />
