--- a/SSD Assignment/Pages/Roles/Index.cshtml
+++ b/SSD Assignment/Pages/Roles/Index.cshtml
@@ -2,7 +2,7 @@
 @model SSD_Assignment.Pages.Roles.IndexModel
 @{
     ViewData["Title"] = "Role Listing"; }
-<h2>Role Listing</h2>
+<h2 style="padding-top: 20px;">Role Listing</h2>
 <div class="row">
     <div class="col-md-4">
         <a asp-page="Create">[Create New Role]</a> |
