--- a/SSD Assignment/Pages/Roles/Manage.cshtml
+++ b/SSD Assignment/Pages/Roles/Manage.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
-@model SSD_Assignment.Pages.Roles.ManageModel 
+@model SSD_Assignment.Pages.Roles.ManageModel
 @{
-    ViewData["Title"] = "Manage User Roles"; 
-    }
-<h2>Role-based Authorization Management</h2>
+    ViewData["Title"] = "Manage User Roles";
+}
+<h2 style="padding-top: 20px;">Role-based Authorization Management</h2>
 <div class="row">
     <div class="col-md-4">
         <a asp-page="Create">Create New Role</a> |
