--- a/SSD Assignment/wwwroot/css/Manage.css
+++ b/SSD Assignment/wwwroot/css/Manage.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url(../images/ProfileBG.jpg);
+    background-image: url(../images/ProfileBG2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
