--- a/SSD Assignment/Pages/Account/Manage/_Layout.cshtml
+++ b/SSD Assignment/Pages/Account/Manage/_Layout.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     Layout = "/Pages/_Layout.cshtml";
 }
+<head>
+    <link rel="stylesheet" href="~/css/Manage.css" />
+</head>
 
-<h2>Manage your account</h2>
+<h2 style="padding-top: 20px;">Manage Your Account</h2>
 
 <div>
     <h4>Change your account settings</h4>
