--- a/SSD Assignment/Pages/Roles/Delete.cshtml
+++ b/SSD Assignment/Pages/Roles/Delete.cshtml
@@ -1,8 +1,9 @@
-﻿@page 
+﻿@page
+
 @model SSD_Assignment.Pages.Roles.DeleteModel
 @{
     ViewData["Title"] = "Delete"; }
-<h2>Delete</h2>
+<h2 style="padding-top: 20px;">Delete</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Application Role</h4>
