--- a/SSD Assignment/Pages/Roles/Edit.cshtml
+++ b/SSD Assignment/Pages/Roles/Edit.cshtml
@@ -1,8 +1,9 @@
-﻿@page 
+﻿@page
+
 @model SSD_Assignment.Pages.Roles.EditModel
 @{
     ViewData["Title"] = "Edit"; }
-<h2>Edit Application Role</h2>
+<h2 style="padding-top: 20px;">Edit Application Role</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,6 +29,6 @@
 <div>
     <a asp-page="./Index">Back to List</a>
 </div>
-@section Scripts { 
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");} 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
