--- a/SSD Assignment/Pages/_LoginPartial.cshtml
+++ b/SSD Assignment/Pages/_LoginPartial.cshtml
@@ -25,11 +25,11 @@
                 <a class="navbuttons" asp-page="/Account/Manage/Index" title="Manage">
                     @if (user.ProfilePic == null)
                     {
-                        <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/default.png" style="width: 60px; height: 60px;" />
+                        <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/default.png" style="width: 50px; height: 50px;" />
                     }
                     else
                     {
-                        <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/@user.ProfilePic" style="width: 100px; height: 60px" />
+                        <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/@user.ProfilePic" style="width: 50%; height: 50%; max-height: 60px; max-width: 85px"/>
                     }
 
                     Hello @user.Name!
