Made it look more like a e-commerce website

--- a/SSD Assignment/Pages/Index.cshtml
+++ b/SSD Assignment/Pages/Index.cshtml
@@ -4,17 +4,20 @@
     ViewData["Title"] = "Home page";
 }
 
-<div>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/welcomepage.jpg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    The World's Market, in Your Hands.
-                    <a class="btn btn-default" asp-page="./Listings/Index">
-                        Check Out Some Listings
-                    </a>
-                </p>
+<body style=" background-color: #E5E5D8">
+    <div>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="~/images/welcomepage.jpg" alt="ASP.NET" class="img-responsive" />
+                <div class="carousel-caption" role="option">
+                    <p>
+                        The World's Market, in Your Hands.
+                        <a class="btn btn-default" asp-page="./Listings/Index">
+                            Check Out Some Listings
+                        </a>
+                    </p>
+                </div>
             </div>
         </div>
-</div>
+    </div>
+</body>
