--- a/SSD Assignment/Pages/Account/Register.cshtml
+++ b/SSD Assignment/Pages/Account/Register.cshtml
@@ -6,6 +6,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<head>
+    <link href=~/css/Register.css rel="stylesheet" type="text/css" />
+</head>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
@@ -59,8 +63,6 @@
 
 @section Scripts {
     <script src="~/lib/jquery/dist/jquery-3.3.1.min.js"></script>
-    RenderSection("Scripts", required: false)
-
     <script>
         $(function () {
             $(":file").change(function () {
