--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/Products.css" />
 }
 
-<h2>Create a New Listing</h2>
+<h2 style="padding-top: 20px;">Create a New Listing</h2>
 
 <h4>What are you listing today?</h4>
 <hr />
