--- a/SSD Assignment/Pages/Listings/Index.cshtml
+++ b/SSD Assignment/Pages/Listings/Index.cshtml
@@ -12,7 +12,9 @@
 <h2 style="padding-top: 20px;">Listings</h2>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn btn-default" asp-page="Create">
+        Create a New Listing
+    </a>
 </p>
 
 <ul class="products">
